Updateded Data base

--- a/notebooks/data_cleaning_tiago.ipynb
+++ b/notebooks/data_cleaning_tiago.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "a451084c-5ec0-4ab5-9220-263fbf55c142",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "[266 rows x 69 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,6 +399,44 @@
     "import functions as func\n",
     "import yaml\n",
     "\n",
+    "try:\n",
+    "    with open(\"../config.yaml\", \"r\") as file:\n",
+    "        config = yaml.safe_load(file)\n",
+    "except:\n",
+    "    print(\"The config.yaml file was not found in the main folder!\")\n",
+    "\n",
+    "df = pd.read_csv(config['data_raw']['file3'])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "37db87a8-de8a-46af-9a61-1165448b760b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The config.yaml file was not found in the main folder!\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe config.yaml file was not found in the main folder!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_raw\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile3\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     10\u001b[0m df\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'config' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
     "try:\n",
     "    with open(\"../config.yaml\", \"r\") as file:\n",
     "        config = yaml.safe_load(file)\n",
