UUpdated plot creating

--- a/notebooks/plot_creation.ipynb
+++ b/notebooks/plot_creation.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "2b0fcba1-c177-4ffd-a0aa-574a89c959fe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading imports\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import functions as func\n",
     "from plotly import graph_objects as go\n",
-    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "db_locations = func.import_yaml()\n",
     "\n",
-    "df = pd.read_csv(db_locations['data_clean']['file1'])\n",
     "\n"
    ]
   },
@@ -113,6 +114,8 @@
     }
    ],
    "source": [
+    "#checking data from df\n",
+    "df = pd.read_csv(db_locations['data_clean']['file1'])\n",
     "df.describe()"
    ]
   },
@@ -120,10 +123,14 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "755fcdfa-0ad9-4378-8243-ec8c04a5ddbf",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
+    "#Creating map plot\n",
     "fig = px.choropleth(df, locations=\"Country Code\" , color=\"Share of Visits\",hover_name=\"Country Name\", range_color=[0,15],\n",
     "                   color_discrete_sequence = px.colors.qualitative.G10, title = \"Tourism growth rate\")\n",
     "\n",
@@ -1774,7 +1781,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Creating map plot\n",
     "fig = px.choropleth(df, locations=\"Country code\" , color=\"% Change\",hover_name=\"Country Name\", range_color=[-100,100],\n",
     "                   color_discrete_sequence = px.colors.qualitative.G10, title = \"Change on % of florest by land\")\n",
     "\n",
@@ -2784,7 +2791,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#creating double bar graph\n",
     "fig  = go.Figure(\n",
     "    data=[\n",
     "        go.Bar(\n",
@@ -3807,7 +3814,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#creating double bar graph\n",
     "fig  = go.Figure(\n",
     "    data=[\n",
     "        go.Bar(\n",
@@ -3834,8 +3841,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "508b28ff-2c87-47cb-b791-8ce2d57ebc7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'plotly' has no attribute 'subplots'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m df2 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data2)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Create the plot tourism vs reforestation per country\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m fig, ax1 \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Plot for number of tourists\u001b[39;00m\n\u001b[1;32m     13\u001b[0m bar_width \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.4\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/conda_base/lib/python3.12/site-packages/_plotly_utils/importers.py:39\u001b[0m, in \u001b[0;36mrelative_import.<locals>.__getattr__\u001b[0;34m(import_name)\u001b[0m\n\u001b[1;32m     36\u001b[0m     class_module \u001b[38;5;241m=\u001b[39m importlib\u001b[38;5;241m.\u001b[39mimport_module(rel_module, parent_name)\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(class_module, class_name)\n\u001b[0;32m---> 39\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{__name__!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;132;01m{name!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m     41\u001b[0m         name\u001b[38;5;241m=\u001b[39mimport_name, \u001b[38;5;18m__name__\u001b[39m\u001b[38;5;241m=\u001b[39mparent_name\n\u001b[1;32m     42\u001b[0m     )\n\u001b[1;32m     43\u001b[0m )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'plotly' has no attribute 'subplots'"
+     ]
+    }
+   ],
+   "source": [
+    "#data recovered from queries\n",
+    "data2 = {\n",
+    "    \"country_name\": [\"France\", \"Poland\", \"Mexico\", \"United States\", \"Thailand\", \"Bahrain\", \"Iceland\", \"Djibouti\", \"Uruguay\", \"Burundi\"],\n",
+    "    \"dp_delta\": [12.9, 4.7, -4, 2.4, 4.6, 80, 66.7, 50, 48.7, 43.4],\n",
+    "    \"num_of_arrivals\": [117109000, 88515000, 51128000, 45037000, 39916000, 1909000, 488000, 63000, 3480000, 299000]\n",
+    "}\n",
+    "df2 = pd.DataFrame(data2)\n",
+    "\n",
+    "# Create the plot tourism vs reforestation per country\n",
+    "fig, ax1 = plt.subplots()\n",
+    "\n",
+    "# Plot for number of tourists\n",
+    "bar_width = 0.4\n",
+    "x = range(len(df2[\"country_name\"]))\n",
+    "ax1.bar(x, df2[\"dp_delta\"], width=bar_width, color='b', alpha=0.6, label='dp_delta')\n",
+    "ax1.set_xlabel('Country Name')\n",
+    "ax1.set_ylabel('dp_delta', color='b')\n",
+    "ax1.tick_params(axis='y', labelcolor='b')\n",
+    "\n",
+    "# Create a second Y-axis and bar plot for num_of_arrivals\n",
+    "ax2 = ax1.twinx()\n",
+    "ax2.bar([i + bar_width for i in x], df2[\"num_of_arrivals\"], width=bar_width, color='r', alpha=0.6, label='num_of_arrivals')\n",
+    "ax2.set_ylabel('num_of_arrivals', color='r')\n",
+    "ax2.tick_params(axis='y', labelcolor='r')\n",
+    "\n",
+    "# Set x-ticks and labels\n",
+    "ax1.set_xticks([i + bar_width / 2 for i in x])\n",
+    "ax1.set_xticklabels(df2[\"country_name\"], rotation=90)\n",
+    "\n",
+    "# Add legends\n",
+    "fig.legend(loc=\"upper left\", bbox_to_anchor=(0.1, 0.9))\n",
+    "\n",
+    "# Title and layout\n",
+    "plt.title('Forest_Evolution_and_Tourists_by_Country')\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n",
+    "# Save the plot\n",
+    "fig.savefig(\"Forest_Evolution_and_num_of_arrivals.jpg\", format='jpeg', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a6f4073-1473-4f81-8f90-268f229c0341",
    "metadata": {},
    "outputs": [],
    "source": []
